@@ -24,10 +24,13 @@ use strict;
 use BerkeleyDB;
 
 use Torrus::ConfigTree;
+use Torrus::TimeStamp;
 use Torrus::SiteConfig;
 use Torrus::Log;
 
 exit(1) if not Torrus::SiteConfig::verify();
+
+Torrus::TimeStamp::init();
 
 my @tree_names = Torrus::SiteConfig::listTreeNames();
 
@@ -59,7 +62,7 @@ foreach my $tree ( @tree_names )
         foreach my $name ( 'leaves', 'collectorLeaves', 'monitorLeaves',
                            'holtwintersLeaves', 'subtrees',
                            'maxSubtreePath', 'maxSubtreeSize', 'views',
-                           'monitors', 'actions' )
+                           'monitors', 'actions', 'compiled' )
         {
             $stats->{$name} = 0;
         }
@@ -77,6 +80,8 @@ foreach my $tree ( @tree_names )
         printf("Views: %d\n",                 $stats->{'views'} );
         printf("Monitors: %d\n",              $stats->{'monitors'} );
         printf("Actions: %d\n",               $stats->{'actions'} );
+        printf("Last compiled: %s\n",
+               scalar(localtime($stats->{'compiled'})));
         printf("\n");
     }
 }
@@ -145,6 +150,9 @@ sub collectOtherStats
 
     $n = scalar( $config_tree->getActionNames() );
     $stats->{'actions'} = $n if defined( $n );
+
+    $n = $config_tree->getTimestamp();
+    $stats->{'compiled'} = $n if defined( $n );
 }
 
 
