@@ -1,3 +1,7 @@
+2006-12-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/configinfo.in: Added the tree compilation timestamp
+
 2006-12-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/SNMP.pm:
